fix overflow

--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,7 @@ body{
     place-items: center;
     background-color: white;
     position: relative;
+    overflow-x: hidden;
 }
 /*  navbar */
 .bg-custom{
@@ -48,7 +49,7 @@ body{
     color: #fff;
     margin-right: 9rem;
     margin-top: 3.5rem;
-    margin-bottom: 0rem;   
+    margin-bottom: 0rem;
 }
 .number{
     margin-left: 1rem;
@@ -435,18 +436,18 @@ body{
     width: 5px;
     border-radius: 5px;
   }
-  
+
   /* Track */
   ::-webkit-scrollbar-track {
     background: #f1f1f1;
   }
-  
+
   /* Handle */
   ::-webkit-scrollbar-thumb {
     background: rgb(70, 70, 70);
     width: 10px;
   }
-  
+
   /* Handle on hover */
   ::-webkit-scrollbar-thumb:hover {
     background: #555;
